--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".DisplayCustomCamera2Activity" />
+        <activity android:name=".VideoImagePreviewActivity"></activity>
     </application>
 
 </manifest>
